# Tersano_ESP_Challenge

./: .gitignore  CMakeLists.txt  COMMENTING_GUIDELINES.md  NEXT_STEPS.md  README.md  partitions.csv
include/: app_config.h  app_types.h  led_controller.h  secrets.example.h
main/: CMakeLists.txt  idf_component.yml  led_controller.cpp  main.cpp
main/include/: app_config.h  app_types.h  secrets.example.h
src/: CMakeLists.txt  actuator_hal.cpp  actuator_hal.h  backlog_store.cpp  backlog_store.h  idf_component.yml  led_controller.cpp  main.cpp  network_hal.cpp  network_hal.h  rtu_controller.cpp  rtu_controller.h  sensor_hal.cpp  sensor_hal.h
supabase/migrations/: 001_status_events.sql  002_telemetry_backlog_fields.sql  003_telemetry_reboot_safe_capture_time.sql
