idf_component_register(
    SRCS
        "main.cpp"
        "led_controller.cpp"
        "sensor_hal.cpp"
        "network_hal.cpp"
    INCLUDE_DIRS
        "."
        "../include"
    REQUIRES
        led_strip
        esp_driver_gpio
        esp_driver_i2c
        driver
        esp_adc
        esp_timer
        esp_http_client
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        json
        mbedtls
)
